fix: Fix horizontal scroll on boards

--- a/src/common.css
+++ b/src/common.css
@@ -1,11 +1,10 @@
 html, body, #root, [data-reactroot] {
   height: 100%;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 body {
   background: #34495e;
-  overflow-x: auto;
 
   /* FIXME: use autoprefixer or equivalent */
   -webkit-user-select: none;
