--- a/src/components/List.css
+++ b/src/components/List.css
@@ -7,7 +7,7 @@
   background: #e9e9e9;
   border-radius: 3px;
   display: inline-block;
-  height: calc(100% - 50px); /* 100% - height of the menu - a bit of space */
+  height: 100%;
   margin: 0;
   margin-right: 10px;
   padding: 5px;
@@ -24,5 +24,5 @@
 }
 
 .cartomancy-list .cartomancy-cards {
-  height: calc(100% - 1em - 10px); /* 100% - font-size of h2 - margin-bottom of h2 */
+  height: 100%;
 }
